[package]
name = "pathfinding"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pathfinding"
path = "src/main.rs"

[dependencies]
ordered-float = "5.0.0"
rand = "0.9.2"
raylib = { version = "5.5.1", features = ["wayland", "sdl"] }

[lints.rust]
unused_imports = "allow"
unused = { level = "allow", priority = -1 }
dead_code = "allow"
